# my_gl

./: .clang_complete  CMakeLists.txt  Doxyfile  TODO.txt
src/common/: .clang_complete  AbstractVectorReader.cpp  AbstractVectorReader.hpp  AlignedValueVectorReader.cpp  AlignedValueVectorReader.hpp  ArrayVec4Provider.cpp  ArrayVec4Provider.hpp  ArrayVectorProvider.cpp  ArrayVectorProvider.hpp  BufferObjectVec4Provider.cpp  BufferObjectVec4Provider.hpp  CMakeLists.txt  CheckEnum.cpp  CheckEnum.hpp  ClientArrayVec4Provider.cpp  ClientArrayVec4Provider.hpp  ClientArrayVectorProvider.cpp  ClientArrayVectorProvider.hpp  Context.cpp  Context.hpp  Export.cpp  Matrix.cpp  Matrix.hpp  MatrixFwd.hpp  MatrixStack.cpp  MatrixStack.hpp  PackedVec4Reader.hpp  PackedVectorReader.hpp  PixelUnpacker.cpp  PixelUnpacker.hpp  PointerFunction.hpp  TypeTraits.hpp  UniqueVec4Provider.cpp  UniqueVec4Provider.hpp  UniqueVectorProvider.cpp  UniqueVectorProvider.hpp  UntypedArray.cpp  UntypedArray.hpp  UntypedCowArray.cpp  UntypedCowArray.hpp  (+22 more)
src/common/image_compare/: CMakeLists.txt  Image.cpp  Image.hpp  ImageComparator.cpp  ImageComparator.hpp  ImageComparatorCmd.cpp
src/common/test/: CMakeLists.txt  TestClientArrayVec4Provider.cpp  TestFunction.cpp  TestFunction.hpp  TestMatrixInverse.cpp  TestMatrixMul.cpp  TestMatrixRowColumnValue.cpp  TestMatrixTranspose.cpp  TestMatrixVecMul.cpp  TestVecLink.cpp  TestVecNormalize.cpp  Vec4SizeTest.cpp  VectorSizeTest.cpp  testMatrix.cpp  testVec4.cpp
src/opencl_impl/: .clang_complete  CLParameterBinder.hpp  CLSource.cpp  CLSource.hpp  CMakeLists.txt  OpenCLContext.cpp  OpenCLContext.hpp  OpenCLPixelDrawer.cl  OpenCLPixelDrawer.cpp  OpenCLPixelDrawer.hpp
src/opencl_impl/image_compare/: CMakeLists.txt  ImageComparator.cl  OpenCLImageComparator.cpp  OpenCLImageComparator.hpp
src/opencl_impl/pipeline/: .clang_complete  CMakeLists.txt  OpenCLClippedPrimitiveGroup.cpp  OpenCLClippedPrimitiveGroup.hpp  OpenCLDepthBuffer.cpp  OpenCLDepthBuffer.hpp
src/opencl_impl/shader/: CMakeLists.txt  OpenCLFragmentAttributeBuffer.cpp  OpenCLFragmentAttributeBuffer.hpp
src/opencl_impl/test/: .clang_complete  CMakeLists.txt  CPPKernel.cl  TestBoostInitalPath.cpp  TestOpenCLCPPKernel.cpp  TestOpenCLContext.cpp  TestOpenCLPixelDrawer.cpp  TestParall.cl  TestParall.cpp
src/soft_impl/: .SoftContext.hpp.swp  .clang_complete  BufferObject.cpp  BufferObject.hpp  BufferObjectManager.hpp  CMakeLists.txt  DepthRange.cpp  DepthRange.hpp  ElementIndexManager.cpp  ElementIndexManager.hpp  ObjectNameManager.cpp  PixelDrawer.cpp  PixelDrawer.hpp  Rectangle.hpp  SDLPixelDrawer.cpp  SDLPixelDrawer.hpp  SoftContext.cpp  SoftContext.hpp  TextureObject.cpp  TextureObject.hpp  ViewportParameter.hpp
src/soft_impl/attribute_manager/: .clang_complete  CMakeLists.txt  ColorManager.cpp  ColorManager.hpp  ColorVectorReader.cpp  ColorVectorReader.hpp  NormalManager.cpp  NormalManager.hpp  NormalProvider.hpp  TexCoordManager.cpp  TexCoordManager.hpp  TwoSourceVec4Manager.cpp  TwoSourceVec4Manager.hpp  TwoSourceVectorManager.cpp  TwoSourceVectorManager.hpp  UniqueNormalProvider.cpp  UniqueNormalProvider.hpp  VertexManager.cpp  VertexManager.hpp
src/soft_impl/image_compare/: CMakeLists.txt  SoftImageComparator.cpp  SoftImageComparator.hpp
src/soft_impl/lighting/: CMakeLists.txt  GroupLightingParam.cpp  GroupLightingParam.hpp  LightParam.cpp  LightParam.hpp  LightSourceParam.cpp  LightSourceParam.hpp  MaterialParam.cpp  MaterialParam.hpp
src/soft_impl/object/: .clang_complete  ArrayBufferObject.cpp  ArrayBufferObject.hpp  ArrayBufferObjectManager.cpp  ArrayBufferObjectManager.hpp  BufferObject.cpp  BufferObject.hpp  BufferObjectManager.hpp  BufferObjectVectorProvider.cpp  BufferObjectVectorProvider.hpp  CMakeLists.txt  ObjectNameManager.cpp  ObjectNameManager.hpp  PixelObject.cpp  PixelObject.hpp  TexelPos.hpp  TextureObject.cpp  TextureObject.hpp  TextureObjectManager.cpp  TextureObjectManager.hpp
src/soft_impl/pipeline/: .clang_complete  CMakeLists.txt  ClippedPrimitiveGroup.cpp  ClippedPrimitiveGroup.hpp  ClippedVertexAttributeBuffer.hpp  Clipper.cpp  Clipper.hpp  ColorBuffer.cpp  ColorBuffer.hpp  DepthBuffer.cpp  DepthBuffer.hpp  DummyPipeline.cpp  FrameBuffer.cpp  FrameBuffer.hpp  IndirectOrderIndexProvider.cpp  IndirectOrderIndexProvider.hpp  Interpolator.cpp  Interpolator.hpp  NaturalOrderIndexProvider.cpp  PointClipper.cpp  PointClipper.hpp  PrimitiveIndex.cpp  PrimitiveIndex.hpp
src/soft_impl/shader/: .clang_complete  CMakeLists.txt  FragmentAttributeBuffer.cpp  FragmentAttributeBuffer.hpp  FragmentShader.cpp  FragmentShader.hpp  Global.hpp  LightVertexShader.cpp  LightVertexShader.hpp  MatrixParam.cpp  MatrixParam.hpp  NoLightVertexShader.cpp  NoLightVertexShader.hpp  SimpleFragmentShader.cpp  SimpleFragmentShader.hpp  TextureFragmentShader.cpp  TextureFragmentShader.hpp  TextureFunc.cpp  TextureFunc.hpp  TextureLightFragmentShader.cpp  TextureLightFragmentShader.hpp  TwoSideLightVertexShader.cpp  TwoSideLightVertexShader.hpp  VertexAttributeBuffer.cpp  VertexAttributeBuffer.hpp  VertexShader.cpp  VertexShader.hpp  WindowCoordinates.cpp  WindowCoordinates.hpp  WrapTextureVertexShader.cpp  WrapTextureVertexShader.hpp
src/soft_impl/test/: .clang_complete  CMakeLists.txt  TestLink.cpp  TestSoftImpl.cpp  testSDLPixelDrawer.cpp
src/test/: CMakeLists.txt  GlutInit.cpp  GlutInit.hpp  GlutTestTpl.hpp  Inst.cpp  Inst.hpp  Main.cpp  Mid.cpp  Mid.h  Mid2.cpp  Mid2.h  MyGLTestTpl.hpp  TestClassBase.hpp  TestFloatStore.cpp  test.cpp  test.h  test2.cpp  test3.cpp
src/test/test_array_buffer_object/: .clang_complete  CMakeLists.txt  GlutTestArrayBufferObject.cpp  MyGLTestArrayBufferObject.cpp  OpenCLImplTestArrayBufferObject.cpp  TestArrayBufferObject.hpp
src/test/test_client_vertex_pointer/: CMakeLists.txt  GlutTestClientArrayPointer.cpp  MyGLTestClientArrayPointer.cpp  OpenCLImplTestClientArrayPointer.cpp  TestClientArrayPointer.hpp
src/test/test_cull_face/: CMakeLists.txt  GlutTestCullFace.cpp  GlutTestCullFaceBack.cpp  MyGLTestCullFace.cpp  MyGLTestCullFaceBack.cpp  TestCullFace.hpp  (+3 more)
(+144 files in other folders)
