PROJECT (my_gl)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


     
IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
     IF(${CMAKE_BUILD_TYPE} MATCHES Debug)
	  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg -fprofile-arcs -ftest-coverage")
     ENDIF()
ENDIF()

IF(MSVC)

     ADD_DEFINITIONS(-D_ITERATOR_DEBUG_LEVEL=0)

ENDIF(MSVC)






set(EXTRA_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${EXTRA_MODULE_PATH}")
INCLUDE("${EXTRA_MODULE_PATH}/TestUtils.cmake")


INCLUDE_DIRECTORIES( "include" src )

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem system REQUIRED)
FIND_PACKAGE(OpenCL REQUIRED)


INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ENABLE_TESTING()
SUBDIRS(3rd src)




FIND_PACKAGE(Doxygen)

IF (DOXYGEN_FOUND)
     SET(DOXYGEN_INPUT "Doxyfile")
SET(DOXYGEN_OUTPUT "html")

ADD_CUSTOM_COMMAND(
  OUTPUT ${DOXYGEN_OUTPUT}
  COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
  COMMAND ${CMAKE_COMMAND} -E echo "Done."
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS ${DOXYGEN_INPUT}
  )

ADD_CUSTOM_TARGET(apidoc DEPENDS ${DOXYGEN_OUTPUT})

ADD_CUSTOM_TARGET(apidoc_forced
  COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
  COMMAND ${CMAKE_COMMAND} -E echo "Done."
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

ENDIF (DOXYGEN_FOUND)
